# whirlybird

./: CHANGELOG.md  Cargo.toml  README.md  \
.github/workflows/: reusable.yml  rust-clippy.yml
src/: argument.rs  lib.rs
src/argument/: maple_created.rs  post.rs  post_added.rs  post_deleted.rs  post_moded.rs  post_published.rs  views.rs
